# tiny-sp1-rollup

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
contracts/: foundry.toml
contracts/src/: RollupBridge.sol
crates/core/: Cargo.toml
crates/core/src/: error.rs  executor.rs  lib.rs  types.rs  utils.rs
crates/program/: Cargo.toml
crates/program/src/: main.rs
crates/script/: Cargo.toml
crates/sequencer/: Cargo.toml
crates/sequencer/config/: default.toml
crates/sequencer/src/: config.rs  main.rs  persistence.rs
crates/stf/: Cargo.toml
crates/stf/src/: lib.rs  tests.rs
