[workspace]
members = [
    "crates/stf",
    "crates/program",
    "crates/script",
    "crates/sequencer",
    "crates/core"
]
resolver = "3"

[workspace.dependencies]
sp1-build = { version = "6.2.2" }
sp1-zkvm = { version = "6.2.2" }
sp1-sdk = { version = "6.2.2", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
anyhow = "1.0"
bincode = "1.3.3"
sha3 = { version = "0.10.8", default-features = false }

alloy = { version = "1.0.35", features = ["essentials", "serde", "rpc"] }
alloy-contract = { version = "1.0.35" }
alloy-sol-types = "1.6"

[patch.crates-io]
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
