[package]
name = "rollup_core"
version = "0.1.0"
edition = "2024"

[dependencies]
stf = { path = "../stf" }

monotree = { version = "0.4", features = ["db_rocksdb"] }
alloy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }